small fixes overflow auto on my issues

--- a/frontend/src/components/myissues/myissues.module.css
+++ b/frontend/src/components/myissues/myissues.module.css
@@ -5,6 +5,7 @@
   background-color: var(--main-bg-color);
   border: 2px solid var(--gray-color);
   position: relative;
+  overflow:auto;
 }
 
 .kanbanContainer {
